--- a/CapstoneProject.ipynb
+++ b/CapstoneProject.ipynb
@@ -713,7 +713,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x29aee1df5c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x243a1ff2c08>"
       ]
      },
      "execution_count": 29,
@@ -759,7 +759,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x29aed970fc8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x243ab809e08>"
       ]
      },
      "execution_count": 30,
@@ -804,7 +804,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x29aed6d9ec8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x243abdb1f88>"
       ]
      },
      "execution_count": 31,
@@ -849,7 +849,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x29aee1db3c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x243abd4e288>"
       ]
      },
      "execution_count": 32,
@@ -1272,7 +1272,8 @@
    "source": [
     "key = 'PEDCOUNT'\n",
     "bar_chart(train, key)\n",
-    "CalculateZTest(train, key)"
+    "CalculateZTest(train, key)\n",
+    "plt.savefig('PEDCOUNT.jpg', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -1301,7 +1302,8 @@
    "source": [
     "key = 'PEDCYLCOUNT'\n",
     "bar_chart(train, key)\n",
-    "CalculateZTest(train, key)"
+    "CalculateZTest(train, key)\n",
+    "plt.savefig('PEDCYLCOUNT.jpg', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -2088,13 +2090,7 @@
       "[I 2020-09-07 21:31:43,580] Trial 41 finished with value: -0.6008245044490299 and parameters: {'entropy_int': 1, 'max_depth': 4}. Best is trial 16 with value: -0.5997643760928938.\n",
       "[I 2020-09-07 21:31:46,756] Trial 42 finished with value: -0.6010414998978011 and parameters: {'entropy_int': 1, 'max_depth': 6}. Best is trial 16 with value: -0.5997643760928938.\n",
       "[I 2020-09-07 21:31:49,486] Trial 43 finished with value: -0.5997643760928938 and parameters: {'entropy_int': 1, 'max_depth': 5}. Best is trial 16 with value: -0.5997643760928938.\n",
-      "[I 2020-09-07 21:31:52,544] Trial 44 finished with value: -0.6257344274831013 and parameters: {'entropy_int': 1, 'max_depth': 8}. Best is trial 16 with value: -0.5997643760928938.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[I 2020-09-07 21:31:52,544] Trial 44 finished with value: -0.6257344274831013 and parameters: {'entropy_int': 1, 'max_depth': 8}. Best is trial 16 with value: -0.5997643760928938.\n",
       "[I 2020-09-07 21:31:55,138] Trial 45 finished with value: -0.6331358429563193 and parameters: {'entropy_int': 1, 'max_depth': 2}. Best is trial 16 with value: -0.5997643760928938.\n",
       "[I 2020-09-07 21:31:58,110] Trial 46 finished with value: -0.6257344274831013 and parameters: {'entropy_int': 1, 'max_depth': 8}. Best is trial 16 with value: -0.5997643760928938.\n",
       "[I 2020-09-07 21:32:00,538] Trial 47 finished with value: -0.6331358429563193 and parameters: {'entropy_int': 1, 'max_depth': 2}. Best is trial 16 with value: -0.5997643760928938.\n",
@@ -2233,13 +2229,7 @@
       "[I 2020-09-07 21:47:56,287] Trial 39 finished with value: -0.5739442870940309 and parameters: {'gamma': 0.2143173350470095, 'max_depth': 2}. Best is trial 31 with value: -0.5660779093130752.\n",
       "[I 2020-09-07 21:48:34,924] Trial 40 finished with value: -0.5773077449245987 and parameters: {'gamma': 1.9766731873521268, 'max_depth': 21}. Best is trial 31 with value: -0.5660779093130752.\n",
       "[I 2020-09-07 21:48:49,450] Trial 41 finished with value: -0.5670775064575265 and parameters: {'gamma': 1.4502511274242769, 'max_depth': 6}. Best is trial 31 with value: -0.5660779093130752.\n",
-      "[I 2020-09-07 21:49:05,737] Trial 42 finished with value: -0.5668743423346562 and parameters: {'gamma': 1.4981866114053304, 'max_depth': 7}. Best is trial 31 with value: -0.5660779093130752.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[I 2020-09-07 21:49:05,737] Trial 42 finished with value: -0.5668743423346562 and parameters: {'gamma': 1.4981866114053304, 'max_depth': 7}. Best is trial 31 with value: -0.5660779093130752.\n",
       "[I 2020-09-07 21:49:25,371] Trial 43 finished with value: -0.5663042106183949 and parameters: {'gamma': 1.7221985100610935, 'max_depth': 9}. Best is trial 31 with value: -0.5660779093130752.\n",
       "[I 2020-09-07 21:49:45,274] Trial 44 finished with value: -0.5668912030272973 and parameters: {'gamma': 1.1867906815713172, 'max_depth': 9}. Best is trial 31 with value: -0.5660779093130752.\n",
       "[I 2020-09-07 21:50:05,963] Trial 45 finished with value: -0.5677541170397283 and parameters: {'gamma': 1.6684891279648348, 'max_depth': 10}. Best is trial 31 with value: -0.5660779093130752.\n",
@@ -2373,13 +2363,7 @@
       "[I 2020-09-07 22:07:28,257] Trial 41 finished with value: -0.5344130269690016 and parameters: {'entropy_int': 0, 'max_depth': 27}. Best is trial 0 with value: -0.5321801291908165.\n",
       "[I 2020-09-07 22:07:51,298] Trial 42 finished with value: -0.5330346293854712 and parameters: {'entropy_int': 0, 'max_depth': 23}. Best is trial 0 with value: -0.5321801291908165.\n",
       "[I 2020-09-07 22:08:15,199] Trial 43 finished with value: -0.5321801291908165 and parameters: {'entropy_int': 0, 'max_depth': 25}. Best is trial 0 with value: -0.5321801291908165.\n",
-      "[I 2020-09-07 22:08:36,594] Trial 44 finished with value: -0.5378193042791622 and parameters: {'entropy_int': 0, 'max_depth': 21}. Best is trial 0 with value: -0.5321801291908165.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[I 2020-09-07 22:08:36,594] Trial 44 finished with value: -0.5378193042791622 and parameters: {'entropy_int': 0, 'max_depth': 21}. Best is trial 0 with value: -0.5321801291908165.\n",
       "[I 2020-09-07 22:08:59,989] Trial 45 finished with value: -0.5355593459544922 and parameters: {'entropy_int': 0, 'max_depth': 28}. Best is trial 0 with value: -0.5321801291908165.\n",
       "[I 2020-09-07 22:09:07,454] Trial 46 finished with value: -0.6146826974071717 and parameters: {'entropy_int': 0, 'max_depth': 3}. Best is trial 0 with value: -0.5321801291908165.\n",
       "[I 2020-09-07 22:09:31,636] Trial 47 finished with value: -0.5389885255289735 and parameters: {'entropy_int': 0, 'max_depth': 31}. Best is trial 0 with value: -0.5321801291908165.\n",
@@ -2503,6 +2487,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
