--- a/CapstoneProject.ipynb
+++ b/CapstoneProject.ipynb
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1600,8 @@
    "source": [
     "key = 'month'\n",
     "bar_chart(train, key)\n",
-    "CalculateZTest(train, key)"
+    "CalculateZTest(train, key)\n",
+    "plt.savefig('month.jpg', dpi=300, bbox_inches='tight')"
    ]
   },
   {
